fixed overlay overflow issue

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -56,13 +56,17 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  translate: var;
   transform: translate(-50%, -50%);
   padding: 26px 28px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  background-color: var(--background);
+  background-color: #fff;
   font-size: 0.9rem;
+  overflow: hidden;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 #location-prompt {
@@ -73,7 +77,7 @@ body {
 #location-prompt p {
   text-align: center;
   margin-bottom: 1rem;
-  color: #d5d5d5;
+  color: #000;
 }
 
 #location-prompt button {
@@ -95,13 +99,14 @@ body {
   height: 100vh;
   width: 100vw;
   z-index: 10;
-  background: rgba(0, 0, 0, 0.9);
+  background: rgba(0, 0, 0, 0.75);
 }
 
-@media only screen and (max-width: 589px) {
+@media only screen and (max-width: 440px) {
   .overlay {
     width: 80%;
     font-size: 0.85rem;
+    padding: 26px 15px;
   }
 }
 
